Adjust service layer to add zoned time support