@@ -12,7 +12,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.sql.Time;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -24,22 +27,29 @@ public class ChartDataServiceImpl implements ChartDataService {
     private final StockPriceService stockPriceService;
     private final UserRepository userRepository;
     private final HoldingRepository holdingRepository;
+    private final TimezoneService timezoneService;
 
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("MMM dd");
     private static final DateTimeFormatter TIME_FORMATTER = DateTimeFormatter.ofPattern("HH:mm");
 
     public ChartDataServiceImpl(StockPriceService stockPriceService,
                                 UserRepository userRepository,
-                                HoldingRepository holdingRepository) {
+                                HoldingRepository holdingRepository,
+                                TimezoneService timezoneService) {
         this.stockPriceService = stockPriceService;
         this.userRepository = userRepository;
         this.holdingRepository = holdingRepository;
+        this.timezoneService = timezoneService;
     }
 
     @Override
     public ChartDataDto getStockPriceChart(String symbol, String timeframe) {
-        List<StockPriceDto> priceData = stockPriceService.getPricesForTimeframe(symbol, timeframe);
+        return getStockPriceChart(symbol, timeframe, TimezoneService.DEFAULT_MARKET_TIMEZONE);
+    }
 
+    @Override
+    public ChartDataDto getStockPriceChart(String symbol, String timeframe, ZoneId timezone) {
+        List<StockPriceDto> priceData = stockPriceService.getPricesForTimeframe(symbol, timeframe, timezone);
         boolean isIntraday = timeframe.equals("1d") || timeframe.equals("1w");
 
         // Prepare chart data
@@ -48,17 +58,30 @@ public class ChartDataServiceImpl implements ChartDataService {
         List<Double> volumes = new ArrayList<>();
         List<Double> percentChanges = new ArrayList<>();
 
-        // Use reversed order for chart data (oldest to newest)
-        for (int i = priceData.size() - 1; i >= 0; i--) {
-            StockPriceDto price = priceData.get(i);
+        // Sort by timestamp to ensure correct order (oldest to newest)
+        priceData.sort(Comparator.comparing(StockPriceDto::getTimestamp));
+
+        for (StockPriceDto price : priceData) {
+            // Get the timestamp in the target timezone
+            ZonedDateTime zdt = price.getZonedTimestamp();
+            if (zdt == null && price.getTimestamp() != null) {
+                // Fallback if zonedTimestamp is not set
+                zdt = price.getTimestamp().atZone(TimezoneService.DEFAULT_MARKET_TIMEZONE)
+                        .withZoneSameInstant(timezone);
+            }
 
             // Format time labels based on timeframe
-            String label = isIntraday ?
-                    price.getTimestamp().format(TIME_FORMATTER) :
-                    price.getTimestamp().format(DATE_FORMATTER);
+            String label;
+            if (zdt != null) {
+                label = isIntraday ? zdt.format(TIME_FORMATTER) : zdt.format(DATE_FORMATTER);
+            } else {
+                // Fallback if timestamp is not available
+                label = "N/A";
+            }
+
             labels.add(label);
             prices.add(price.getPrice().doubleValue());
-            volumes.add(price.getVolume() !=  null ? price.getVolume().doubleValue() : 0.0);
+            volumes.add(price.getVolume() != null ? price.getVolume().doubleValue() : 0.0);
 
             // Add percentage change as a dataset
             if (price.getChangePercent() != null) {
@@ -74,8 +97,12 @@ public class ChartDataServiceImpl implements ChartDataService {
         datasets.put("Volume", volumes);
         datasets.put("PercentChange", percentChanges);
 
+        // Build the chart title with timezone information
+        String timezoneDisplay = timezone.getId();
+        String title = symbol + " Price Chart (" + timeframe + ", " + timezoneDisplay + ")";
+
         return ChartDataDto.builder()
-                .title(symbol + " Price Chart")
+                .title(title)
                 .xAxisLabel("Time")
                 .yAxisLabel("Price")
                 .labels(labels)
@@ -85,6 +112,11 @@ public class ChartDataServiceImpl implements ChartDataService {
 
     @Override
     public ChartDataDto getPortfolioValueChart(Long userId, String timeframe) {
+        return getPortfolioValueChart(userId, timeframe, TimezoneService.DEFAULT_MARKET_TIMEZONE);
+    }
+
+    @Override
+    public ChartDataDto getPortfolioValueChart(Long userId, String timeframe, ZoneId timezone) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
@@ -113,20 +145,30 @@ public class ChartDataServiceImpl implements ChartDataService {
         // Get all holdings
         List<Holding> holdings = holdingRepository.findByUser(user);
 
-        // For each holding, get historical prices
+        // For each holding, get historical prices in the requested timezone
         Map<LocalDateTime, BigDecimal> dateValueMap = new TreeMap<>();
 
         for (Holding holding : holdings) {
             List<StockPriceDto> priceData = stockPriceService.getHistoricalPrices(
-                    holding.getSymbol(), startTime, endTime);
+                    holding.getSymbol(), startTime, endTime, timezone);
 
             for (StockPriceDto price : priceData) {
-                LocalDateTime date = price.getTimestamp().toLocalDate().atStartOfDay();
-                BigDecimal positionValue = price.getPrice().multiply(holding.getQuantity());
+                // Convert timestamp to the start of day in the target timezone
+                ZonedDateTime zdt = price.getZonedTimestamp();
+                if (zdt == null && price.getTimestamp() != null) {
+                    zdt = price.getTimestamp().atZone(TimezoneService.DEFAULT_MARKET_TIMEZONE)
+                            .withZoneSameInstant(timezone);
+                }
 
-                // Add to total for this date
-                dateValueMap.putIfAbsent(date, BigDecimal.ZERO);
-                dateValueMap.put(date, dateValueMap.get(date).add(positionValue));
+                if (zdt != null) {
+                    // Use the start of day as key to group data by day
+                    LocalDateTime date = zdt.toLocalDate().atStartOfDay();
+                    BigDecimal positionValue = price.getPrice().multiply(holding.getQuantity());
+
+                    // Add to total for this date
+                    dateValueMap.putIfAbsent(date, BigDecimal.ZERO);
+                    dateValueMap.put(date, dateValueMap.get(date).add(positionValue));
+                }
             }
         }
 
@@ -135,7 +177,9 @@ public class ChartDataServiceImpl implements ChartDataService {
         List<Double> portfolioValues = new ArrayList<>();
 
         for (Map.Entry<LocalDateTime, BigDecimal> entry : dateValueMap.entrySet()) {
-            labels.add(entry.getKey().format(DATE_FORMATTER));
+            // Convert LocalDateTime to ZonedDateTime in the target timezone for formatting
+            ZonedDateTime zdt = entry.getKey().atZone(timezone);
+            labels.add(zdt.format(DATE_FORMATTER));
             portfolioValues.add(entry.getValue().doubleValue());
         }
 
@@ -143,8 +187,12 @@ public class ChartDataServiceImpl implements ChartDataService {
         Map<String, List<Double>> datasets = new HashMap<>();
         datasets.put("Portfolio Value", portfolioValues);
 
+        // Add timezone to chart title
+        String timezoneDisplay = timezone.getId();
+        String title = "Portfolio Value Over Time (" + timeframe + ", " + timezoneDisplay + ")";
+
         return ChartDataDto.builder()
-                .title("Portfolio Value Over Time")
+                .title(title)
                 .xAxisLabel("Date")
                 .yAxisLabel("Value")
                 .labels(labels)
@@ -154,6 +202,11 @@ public class ChartDataServiceImpl implements ChartDataService {
 
     @Override
     public ChartDataDto getComparisonChart(String[] symbols, String timeframe) {
+        return getComparisonChart(symbols, timeframe, TimezoneService.DEFAULT_MARKET_TIMEZONE);
+    }
+
+    @Override
+    public ChartDataDto getComparisonChart(String[] symbols, String timeframe, ZoneId timezone) {
         LocalDateTime endTime = LocalDateTime.now();
         LocalDateTime startTime;
 
@@ -180,16 +233,26 @@ public class ChartDataServiceImpl implements ChartDataService {
         Set<LocalDateTime> allDates = new TreeSet<>();
         Map<String, Map<LocalDateTime, BigDecimal>> symbolPriceMap = new HashMap<>();
 
-        // For each symbol, get historical prices
+        // For each symbol, get historical prices in the requested timezone
         for (String symbol : symbols) {
             Map<LocalDateTime, BigDecimal> priceMap = new TreeMap<>();
             List<StockPriceDto> priceData = stockPriceService.getHistoricalPrices(
-                    symbol, startTime, endTime);
+                    symbol, startTime, endTime, timezone);
 
             for (StockPriceDto price : priceData) {
-                LocalDateTime date = price.getTimestamp().toLocalDate().atStartOfDay();
-                priceMap.put(date, price.getPrice());
-                allDates.add(date);
+                // Convert timestamp to the start of day in the target timezone
+                ZonedDateTime zdt = price.getZonedTimestamp();
+                if (zdt == null && price.getTimestamp() != null) {
+                    zdt = price.getTimestamp().atZone(TimezoneService.DEFAULT_MARKET_TIMEZONE)
+                            .withZoneSameInstant(timezone);
+                }
+
+                if (zdt != null) {
+                    // Use the start of day as key
+                    LocalDateTime date = zdt.toLocalDate().atStartOfDay();
+                    priceMap.put(date, price.getPrice());
+                    allDates.add(date);
+                }
             }
 
             symbolPriceMap.put(symbol, priceMap);
@@ -206,7 +269,9 @@ public class ChartDataServiceImpl implements ChartDataService {
 
         // Fill in data points for each date
         for (LocalDateTime date : allDates) {
-            labels.add(date.format(DATE_FORMATTER));
+            // Convert to ZonedDateTime for formatting
+            ZonedDateTime zdt = date.atZone(timezone);
+            labels.add(zdt.format(DATE_FORMATTER));
 
             for (String symbol : symbols) {
                 Map<LocalDateTime, BigDecimal> priceMap = symbolPriceMap.get(symbol);
@@ -217,14 +282,18 @@ public class ChartDataServiceImpl implements ChartDataService {
                 } else {
                     // Use previous value or null if no price available
                     List<Double> symbolData = datasets.get(symbol);
-                    Double prevValue = symbolData.isEmpty() ? null : symbolData.get(symbolData.size() - 1);
+                    Double prevValue = symbolData.isEmpty() ? null : symbolData.getLast();
                     datasets.get(symbol).add(prevValue);
                 }
             }
         }
 
+        // Add timezone to chart title
+        String timezoneDisplay = timezone.getId();
+        String title = "Stock Price Comparison (" + timeframe + ", " + timezoneDisplay + ")";
+
         return ChartDataDto.builder()
-                .title("Stock Price Comparison")
+                .title(title)
                 .xAxisLabel("Date")
                 .yAxisLabel("Price")
                 .labels(labels)
